--- a/index.html
+++ b/index.html
@@ -18,128 +18,127 @@
 <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet"/>
 
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: #050505;
-        color: #ffffff;
-        font-family: 'Montserrat', sans-serif;
-    }
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #050505;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    overflow-y: auto;
+}
 
-    .slide-container {
-        min-height: 100vh;
-        max-width: 1280px;
-        margin: 0 auto;
-        padding: 60px 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        background-color: #080808;
-        border: 1px solid #1a1a1a;
-        overflow: hidden;
-    }
+/* Página / Seção */
+.page {
+    min-height: 100vh;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 80px 20px;
+    position: relative;
+    background-color: #080808;
+    border-bottom: 1px solid #1a1a1a;
+}
 
-    /* Decorative elements */
-    .gold-line-top,
-    .gold-line-bottom {
-        position: absolute;
-        width: 2px;
-        height: 100px;
-        background-color: #D4AF37;
-        opacity: 0.8;
-    }
+/* Decorative elements */
+.gold-line-top,
+.gold-line-bottom {
+    position: absolute;
+    width: 2px;
+    height: 100px;
+    background-color: #D4AF37;
+    opacity: 0.8;
+}
 
-    .gold-line-top { top: 60px; }
-    .gold-line-bottom { bottom: 60px; }
+.gold-line-top { top: 60px; left: 50%; }
+.gold-line-bottom { bottom: 60px; left: 50%; }
 
-    .border-frame {
-        position: absolute;
-        inset: 20px;
-        border: 1px solid rgba(212, 175, 55, 0.15);
-        pointer-events: none;
-    }
+.border-frame {
+    position: absolute;
+    inset: 20px;
+    border: 1px solid rgba(212, 175, 55, 0.15);
+    pointer-events: none;
+}
 
-    .corner-accent {
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        border: 2px solid #D4AF37;
-        opacity: 0.6;
-    }
+.corner-accent {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #D4AF37;
+    opacity: 0.6;
+}
 
-    .top-left { top: 20px; left: 20px; border-right: 0; border-bottom: 0; }
-    .top-right { top: 20px; right: 20px; border-left: 0; border-bottom: 0; }
-    .bottom-left { bottom: 20px; left: 20px; border-right: 0; border-top: 0; }
-    .bottom-right { bottom: 20px; right: 20px; border-left: 0; border-top: 0; }
+.top-left { top: 20px; left: 20px; border-right: 0; border-bottom: 0; }
+.top-right { top: 20px; right: 20px; border-left: 0; border-bottom: 0; }
+.bottom-left { bottom: 20px; left: 20px; border-right: 0; border-top: 0; }
+.bottom-right { bottom: 20px; right: 20px; border-left: 0; border-top: 0; }
 
-    .main-title {
-        font-family: 'Playfair Display', serif;
-        font-size: clamp(42px, 8vw, 82px);
-        text-transform: uppercase;
-        color: #D4AF37;
-        letter-spacing: 2px;
-        text-align: center;
-        margin-bottom: 20px;
-        text-shadow: 0 2px 10px rgba(0,0,0,0.5);
-    }
+.main-title {
+    font-family: 'Playfair Display', serif;
+    font-size: clamp(42px, 8vw, 82px);
+    text-transform: uppercase;
+    color: #D4AF37;
+    letter-spacing: 2px;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
-    .subtitle {
-        font-size: clamp(16px, 3vw, 24px);
-        font-weight: 300;
-        color: #e0e0e0;
-        letter-spacing: 3px;
-        text-transform: uppercase;
-        text-align: center;
-        max-width: 800px;
-        margin-bottom: 40px;
-    }
+.subtitle {
+    font-size: clamp(16px, 3vw, 24px);
+    font-weight: 300;
+    color: #e0e0e0;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto 40px;
+}
 
-    .highlight-box {
-        background-color: rgba(212, 175, 55, 0.05);
-        border: 1px solid rgba(212, 175, 55, 0.2);
-        padding: 14px 28px;
-        display: flex;
-        align-items: center;
-        gap: 12px;
-    }
+.highlight-box {
+    background-color: rgba(212, 175, 55, 0.05);
+    border: 1px solid rgba(212, 175, 55, 0.2);
+    padding: 14px 28px;
+    display: inline-flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 40px;
+}
 
-    .highlight-text {
-        color: #D4AF37;
-        font-size: 13px;
-        font-weight: 600;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-    }
+.highlight-text {
+    color: #D4AF37;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
 
-    .author-tag {
-        font-size: 14px;
-        color: #888;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        margin-top: 60px;
-        border-top: 1px solid #333;
-        padding-top: 20px;
-        width: 220px;
-        text-align: center;
-    }
+.author-tag {
+    font-size: 14px;
+    color: #888;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-top: 80px;
+    border-top: 1px solid #333;
+    padding-top: 20px;
+    width: 240px;
+    text-align: center;
+}
 
-    .grid-overlay {
-        position: absolute;
-        inset: 0;
-        background-image:
-            linear-gradient(rgba(255,255,255,0.03) 1px, transparent 1px),
-            linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px);
-        background-size: 40px 40px;
-        opacity: 0.25;
-        pointer-events: none;
-    }
+.grid-overlay {
+    position: absolute;
+    inset: 0;
+    background-image:
+        linear-gradient(rgba(255,255,255,0.03) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px);
+    background-size: 40px 40px;
+    opacity: 0.25;
+    pointer-events: none;
+}
 </style>
 </head>
 
 <body>
 
-<div class="slide-container">
+<!-- CAPA -->
+<section class="page flex flex-col justify-center items-center text-center">
 
     <div class="grid-overlay"></div>
     <div class="border-frame"></div>
@@ -152,9 +151,9 @@
     <div class="gold-line-top"></div>
     <div class="gold-line-bottom"></div>
 
-    <div class="relative z-10 flex flex-col items-center text-center">
+    <div class="relative z-10">
 
-        <div class="highlight-box mb-10">
+        <div class="highlight-box">
             <i class="fas fa-crown text-yellow-600"></i>
             <span class="highlight-text">Edição Premium • Alta Performance</span>
         </div>
@@ -190,7 +189,7 @@
         </div>
 
     </div>
-</div>
+</section>
 
 </body>
-  </html>
+            </html>
