--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
 
 <meta name="description" content="Ebook premium sobre foco absoluto, execução estratégica e construção de riqueza com alta performance.">
 
-<!-- Tailwind CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-
-<!-- Google Fonts -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap">
-
-<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
 
 <style>
-/* Base */
 body {
     margin: 0;
     background-color: #050505;
@@ -27,7 +21,6 @@ body {
     overflow-x: hidden;
 }
 
-/* Página */
 .page {
     min-height: 100vh;
     max-width: 1280px;
@@ -38,7 +31,6 @@ body {
     border-bottom: 1px solid #1a1a1a;
 }
 
-/* Moldura */
 .frame {
     position: absolute;
     inset: 20px;
@@ -46,10 +38,7 @@ body {
     pointer-events: none;
 }
 
-/* Tipografia */
-.gold {
-    color: #D4AF37;
-}
+.gold { color: #D4AF37; }
 
 .title {
     font-family: 'Playfair Display', serif;
@@ -78,13 +67,12 @@ body {
 
 .text {
     max-width: 900px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
     font-size: 18px;
-    line-height: 1.8;
+    line-height: 1.9;
     color: #dddddd;
 }
 
-/* Lista */
 .list {
     max-width: 900px;
     margin: 0 auto;
@@ -135,9 +123,16 @@ body {
     <h2 class="section-title">Introdução</h2>
 
     <p class="text">
-        Produtividade extrema não é trabalhar mais horas, e sim direcionar
-        energia apenas para o que gera resultado real. Este manual foi criado
-        para quem busca alta performance, clareza mental e crescimento financeiro.
+        Este não é um manual sobre trabalhar mais. É um guia prático sobre
+        **trabalhar melhor, com clareza, estratégia e controle total do seu tempo**.
+        Produtividade extrema é o diferencial silencioso das pessoas que constroem
+        resultados acima da média.
+    </p>
+
+    <p class="text">
+        Ao longo deste ebook, você aprenderá como eliminar distrações,
+        estruturar sua rotina de execução, tomar decisões com mais precisão
+        e criar sistemas que trabalham a seu favor.
     </p>
 </section>
 
@@ -147,15 +142,22 @@ body {
 
     <h2 class="section-title">Capítulo 1 — Foco Absoluto</h2>
 
-    <p class="text mb-10">
-        O foco é o ativo mais valioso da era digital. Pessoas produtivas eliminam
-        distrações e executam com intensidade total nas tarefas certas.
+    <p class="text">
+        Foco absoluto é a habilidade de direcionar sua atenção total para uma
+        única tarefa de alto impacto por um período contínuo de tempo.
+        Pessoas produtivas não fazem mais coisas — fazem **as coisas certas**.
+    </p>
+
+    <p class="text">
+        Distrações modernas são projetadas para capturar sua atenção.
+        Dominar o foco exige decisões conscientes e limites claros.
     </p>
 
     <ul class="list text">
-        <li>Eliminar distrações irrelevantes</li>
-        <li>Executar tarefas em blocos profundos</li>
-        <li>Definir prioridades claras</li>
+        <li>Eliminar notificações e estímulos irrelevantes</li>
+        <li>Trabalhar em blocos de foco profundo (deep work)</li>
+        <li>Definir apenas 1 prioridade principal por ciclo</li>
+        <li>Encerrar tarefas antes de iniciar novas</li>
     </ul>
 </section>
 
@@ -166,10 +168,22 @@ body {
     <h2 class="section-title">Capítulo 2 — Execução Estratégica</h2>
 
     <p class="text">
-        Ideias sem execução não geram riqueza. A execução estratégica é baseada
-        em clareza, consistência e métricas. Pequenas ações bem feitas superam
-        grandes planos nunca executados.
+        Execução estratégica é transformar planos em ações mensuráveis.
+        Ideias não geram resultados sozinhas. A diferença entre amadores
+        e profissionais está na capacidade de executar com consistência.
     </p>
+
+    <p class="text">
+        Estratégia sem execução é ilusão. Execução sem estratégia é esforço desperdiçado.
+        Alta performance surge quando ambos trabalham juntos.
+    </p>
+
+    <ul class="list text">
+        <li>Quebrar metas grandes em ações diárias</li>
+        <li>Medir progresso semanalmente</li>
+        <li>Eliminar tarefas que não geram retorno</li>
+        <li>Focar em alavancas, não em volume</li>
+    </ul>
 </section>
 
 <!-- CAPÍTULO 3 -->
@@ -179,10 +193,22 @@ body {
     <h2 class="section-title">Capítulo 3 — Construção de Riqueza</h2>
 
     <p class="text">
-        Riqueza é construída através de sistemas. Quem depende apenas do próprio
-        esforço sempre estará limitado pelo tempo. Sistemas trabalham mesmo
-        quando você não está presente.
+        Riqueza não é fruto de esforço isolado, mas de sistemas bem construídos.
+        Pessoas altamente produtivas criam processos que funcionam mesmo quando
+        elas não estão presentes.
     </p>
+
+    <p class="text">
+        O objetivo final da produtividade extrema é liberdade: liberdade de tempo,
+        de escolha e de crescimento contínuo.
+    </p>
+
+    <ul class="list text">
+        <li>Construir ativos ao invés de apenas renda</li>
+        <li>Automatizar processos repetitivos</li>
+        <li>Delegar tarefas operacionais</li>
+        <li>Focar em crescimento sustentável</li>
+    </ul>
 </section>
 
 <!-- CONCLUSÃO -->
@@ -192,9 +218,13 @@ body {
     <h2 class="section-title">Conclusão</h2>
 
     <p class="text">
-        Produtividade extrema é uma decisão diária. Ao dominar foco, execução
-        estratégica e sistemas, você constrói uma base sólida para liberdade
-        financeira e alta performance sustentável.
+        Produtividade extrema é uma escolha diária. Pequenas decisões consistentes
+        constroem grandes resultados ao longo do tempo.
+    </p>
+
+    <p class="text">
+        Ao aplicar os princípios deste manual, você estará criando uma base sólida
+        para alta performance, crescimento financeiro e controle total do seu tempo.
     </p>
 
     <p class="mt-20 gold tracking-widest uppercase">
@@ -203,4 +233,4 @@ body {
 </section>
 
 </body>
-        </html>
+    </html>
